# ram19food

./: .firebaserc  Dockerfile  README.md  pyproject.toml
.firebase/: hosting.cHVibGlj.cache
public/: index.html
src/ram19food/: main.py
src/ram19food/code/data/: food.csv
